force-app/main/default/objects/API_Child_Parameter__mdt/API_Child_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Used to track parameters that are nested for arrays like child records for the root SObject used for the API Operation.</description>
    <label>API Child Parameter</label>
    <pluralLabel>API Child Parameters</pluralLabel>
</CustomObject>