force-app/main/default/objects/API_Child_Parameter__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>string</fullName>
                <default>true</default>
                <label>string</label>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>object</fullName>
            </value>
            <value>
                <fullName>array</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>