force-app/main/default/objects/API_Child_Parameter__mdt/fields/Override_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Override_Id_Field__c</fullName>
    <label>Override Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>