force-app/main/default/objects/API_Child_Parameter__mdt/fields/Override_Method__c.field-meta.xml
<CustomField>
    <fullName>Override_Method__c</fullName>
    <label>Override Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>